@@ -39,7 +39,16 @@
 		<tag name="res_poison" value="15,20" type="int" />
 		<!-- Misc. -->
 		<desc>Orc scouts are clever in battle. They can not only hide from their foes, when they feel their life is in danger, but they can detect hidden foes as well. The orc scout uses the common scout weapon of an orc bow, and their arrows cause large damage to those they hunt.</desc>
-		<!-- Missing: Orcish Bow, Arrow, Clean Bandage, Food -->
+		<!-- Equiped -->
+		<equipped>
+			<item id="13b1" /> <!-- Bow -->
+			<item id="e75"> <!-- Backpack -->
+				<content>
+					<item id="f3f"><amount><random min="50" max="70"/></amount></item> <!-- Arrows -->
+				</content>
+			</item>
+		</equipped>
+		<!-- Missing: 1-15 Clean Bandage, 3-5 Apples -->
 		<lootpacks>lootpack_average</lootpacks>
 		<category>Monsters\Orcs\Orc Scout</category>
 		<strproperty name="slayer_group" value="orcs" />
